--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.10.7",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "session-file-store": "^1.4.0",
     "socket.io": "^2.3.0"
   }
 }
