--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/AlexanderGlazyrin/draw-box#readme",
   "dependencies": {
     "concurrently": "^5.3.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0"
   }
 }
