--- a/back-draw/package.json
+++ b/back-draw/package.json
@@ -15,10 +15,14 @@
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-socket.io-session": "^1.3.5",
+    "express-validator": "^6.6.1",
     "hbs": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.0.0",
     "mongoose": "^5.10.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
